k8s-development/chat-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      component: chat-app 
  template:
    metadata:
      labels:
        component: chat-app 
    spec:
      containers:
      - name: chat-app
        image: yusiangeng/chat-app-for-nginx:v5
        ports:
        - containerPort: 8081
        resources:
          limits:
            memory: "1G"
            cpu: "1.0"
