k8s-development/chat-app-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-cluster-ip-service
spec:
  selector:
    component: chat-app
  ports:
    - port: 8081
      targetPort: 8081
